Copy code over from notebook-molecular-visualization and get it running (barely)

--- a/example/index.html
+++ b/example/index.html
@@ -24,7 +24,7 @@
           <h1>Molecular Visualization</h1>
         </div>
 
-        <script src="js/bundle.js"></script>
+        <script src="js/bundle.example.js"></script>
 
         <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
         <script>
