--- a/example/index.html
+++ b/example/index.html
@@ -21,16 +21,9 @@
 
         <!-- Add your site or application content here -->
         <div class="app">
-          <h1>Molecular Visualization</h1>
+          <h1>nbmolviz2d</h1>
         </div>
 
         <script src="js/bundle.example.js"></script>
-
-        <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
-        <script>
-            window.ga=function(){ga.q.push(arguments)};ga.q=[];ga.l=+new Date;
-            ga('create','UA-XXXXX-Y','auto');ga('send','pageview')
-        </script>
-        <script src="https://www.google-analytics.com/analytics.js" async defer></script>
     </body>
 </html>
