Add selected_atom_indices input to example, syncing that data between views works

--- a/example/index.html
+++ b/example/index.html
@@ -12,6 +12,7 @@
 
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="css/home.css">
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
     </head>
     <body>
@@ -20,8 +21,10 @@
         <![endif]-->
 
         <!-- Add your site or application content here -->
-        <div class="app">
+        <div class="container">
           <h1>nbmolviz2d</h1>
+          <div class="nbmolviz2d"></div>
+          <div class="data"></div>
         </div>
 
         <script src="js/bundle.example.js"></script>
