Rename to react-molecule-2d

--- a/example/index.html
+++ b/example/index.html
@@ -21,8 +21,8 @@
 
         <!-- Add your site or application content here -->
         <div class="container">
-          <h1>nbmolviz2d</h1>
-          <div class="nbmolviz2d"></div>
+          <h1>react-molecule-2d</h1>
+          <div class="react-molecule-2d"></div>
           <div class="data"></div>
         </div>
 
